--- a/dillo/templates/dillo/components/_profile_header.pug
+++ b/dillo/templates/dillo/components/_profile_header.pug
@@ -8,7 +8,9 @@
     | {% include 'dillo/components/_profile_avatar.pug' with user=user size='large' %}
 
   //- Username or Name
-  a.profile-name(href="#", class="{{ is_link_disabled }}")
+  a.profile-name(
+    class="{{ is_link_disabled }}",
+    href="{% url 'profile_details' user.username %}")
     span {% firstof user.profile.name user.username %}
     | {% if user.profile.name %}
     .username @{{ user.username }}
@@ -17,14 +19,18 @@
   //- Location
   | {% if user.profile.location %}
   .profile-location
-    a(href="https://www.google.com/maps/place/{{ user.profile.location | slugify }}", target="_blank")
+    a(
+      href="https://www.google.com/maps/place/{{ user.profile.location | slugify }}",
+      target="_blank")
       i.i-map-pin
       | {{ user.profile.location }}
   | {% endif %}
 
   //- Website
   | {% if user.profile.website %}
-  a(href="{{ user.profile.website }}")
+  a(
+    href="{{ user.profile.website }}",
+    target="_blank")
     | {{ user.profile.website_hostname }}
   | {% endif %}
 
@@ -35,6 +41,7 @@
     a.btn.btn-icon(
       data-toggle="tooltip",
       href="{{ profile_link.url }}",
+      target="_blank",
       title="{{ social_site | title }}")
       span
         i(class="i-{% firstof profile_link.social 'link' %}")
@@ -52,13 +59,13 @@
     | {% if user.profile.followers_count > 0 %}
     span.stat(
       class="js-show-modal {% if user.profile.followers_count %}stat-modal{% endif %}",
-      id="user-followers-{{ user.id }}",
+      data-content_url="{% url 'embed_user_followers_list' user_id=user.id %}",
       data-modal_category='list',
       data-modal_title='{% trans "Followers" %}',
-      data-content_url="{% url 'embed_user_followers_list' user_id=user.id %}",
-      title='{% trans "Followers" %}',
+      data-target='#modal',
       data-toggle='modal',
-      data-target='#modal')
+      id="user-followers-{{ user.id }}",
+      title='{% trans "Followers" %}')
       span {{ user.profile.followers_count }}
       span follower{{ user.profile.followers_count|pluralize }}
     | {% endif %}
@@ -66,13 +73,13 @@
     | {% if user.profile.following_count > 0 %}
     span.stat(
       class="js-show-modal {% if user.profile.following_count %}stat-modal{% endif %}",
-      id="user-following-{{ user.id }}",
+      data-content_url="{% url 'embed_user_following_list' user_id=user.id %}",
       data-modal_category='list',
       data-modal_title='{% trans "Following" %}',
-      data-content_url="{% url 'embed_user_following_list' user_id=user.id %}",
-      title='{% trans "Following" %}',
+      data-target='#modal',
       data-toggle='modal',
-      data-target='#modal')
+      id="user-following-{{ user.id }}",
+      title='{% trans "Following" %}')
       span {{ user.profile.following_count }}
       span following
     | {% endif %}
