--- a/dillo/templates/dillo/posts_base.pug
+++ b/dillo/templates/dillo/posts_base.pug
@@ -50,7 +50,7 @@ ul#posts-list.post-list(
 
 .sidebar-block
 	.btn-toolbar-row
-		.btn-group.btn-options
+		.btn-group
 			a.btn(
 				title="{% trans 'List View' %}",
 				href="?layout=list",
