UI: More explicit "See All" links

--- a/dillo/templates/dillo/components/_feed_events.pug
+++ b/dillo/templates/dillo/components/_feed_events.pug
@@ -30,5 +30,5 @@
 
 	a.feed-group-footer(
 		href="{% url 'event_list' %}", title="{% trans 'See All Events' %}")
-		| {% trans 'See More' %}
+		| {% trans 'See All Events' %}
 | {% endif %}
