--- a/dillo/templates/dillo/feeds/explore_list_embed.pug
+++ b/dillo/templates/dillo/feeds/explore_list_embed.pug
@@ -42,7 +42,7 @@ li.post-container.post-feed-transparent
 
     .post-header-action
       a(href="{% url 'short-list' %}")
-        | {% trans 'See more' %}
+        | {% trans 'See All Shorts' %}
 
   .post-feed-embed
     .post-feed-embed-16by9
@@ -79,7 +79,7 @@ li.post-container.post-feed-transparent
 
     .post-header-action
       a(href="{% url 'reel-list' %}")
-        | {% trans 'See more' %}
+        | {% trans 'See All Reels' %}
 
   .post-feed-embed
     .post-feed-embed-16by9
