Email: Update reference to logo

--- a/dillo/templates/dillo/emails/base.pug
+++ b/dillo/templates/dillo/emails/base.pug
@@ -15,7 +15,7 @@ doctype html
 - var label_brand = "animato";
 - var label_brand_url = "https://anima.to";
 
-- var logo_url = "https://chat.anima.to/assets/logo.png";
+- var logo_url = "https://static.anima.to/images/logotype.png";
 - var logo_height = "28px";
 - var logo_width = "150px";
 
@@ -91,7 +91,7 @@ html(style="#{css_font_family}; #{css_box_sizing}; #{css_body_font_size_base}; m
 									tr(style="#{css_font_family}; #{css_box_sizing}; #{css_body_font_size_base}; margin: 0;")
 										td(style="#{css_font_family}; #{css_box_sizing}; vertical-align: middle; text-align: center; margin: 0;", align='center', valign='top')
 											a(style="display: block; text-align: center; padding-top: 40px; padding-bottom: 20px; width: 100%", href=label_brand_url)
-												img.logo(src="https://chat.anima.to/assets/logo.png", style="display: block; margin: auto;", alt=label_brand width=logo_width height=logo_height)
+												img.logo(src="https://static.anima.to/images/logotype.png", style="display: block; margin: auto;", alt=label_brand width=logo_width height=logo_height)
 									tr(style="#{css_font_family}; #{css_box_sizing}; #{css_body_font_size_base}; margin: 0;")
 										td.content-wrap(style="#{css_font_family}; #{css_box_sizing}; #{css_body_font_size_base}; vertical-align: top; margin: 0; padding-left: 40px; padding-right: 40px; padding-top: 0; padding-bottom: 20px;", valign='top')
 											table(width='100%', cellpadding='0', cellspacing='0', style="#{css_font_family}; #{css_box_sizing}; #{css_body_font_size_base}; margin: 0;")
